# PortScanner

./: CHANGELOG.md  README.md  pyproject.toml
src/: NetScan.py  gui.py  port_ScannerDemo1.py  readme.md
